# self-ref-box

./: .gitignore  Cargo.toml  Justfile  README.md  clippy.toml
crates/aliasable-view/: Cargo.toml  README.md
crates/aliasable-view/src/: lib.rs  traits.rs
crates/aliasable-view/src/aliasable/: aliasable_ref_mut.rs  mod.rs
crates/aliasable-view/src/alloc_impls/: mod.rs
crates/aliasable-view/src/core_impls/: mod.rs
crates/aliasable-view/src/std_impls/: mod.rs
crates/attached-ref/: Cargo.toml  README.md
crates/attached-ref/src/: attached_ref_slot.rs  lib.rs  slot.rs
crates/attached-ref/src/erase/: mod.rs
crates/self-bind/: Cargo.toml  README.md
crates/self-bind/src/: lib.rs  uninhabited_ref.rs
crates/self-bind/src/erase/: heap_erase.rs
crates/self-ref-box/: Cargo.toml  LICENSE-MIT
crates/self-ref-box/src/: data_source.rs  lib.rs  self_bind_struct.rs  slot.rs  variance.rs
crates/self-ref-box/src/erase/: layout_erase.rs  lifetime_erase.rs  mod.rs
crates/self-ref-box/src/self_ref/: mod.rs
crates/variance-family/: Cargo.toml  README.md
crates/variance-family/src/: core_impls.rs  lib.rs  macros.rs  main_const_impls.rs  main_family_impls.rs  main_fn_impls.rs  main_mut_impls.rs  traits.rs
