[package]
name         = "aliasable-view"
authors      = ["Finley Huggins"]
description  = "Markers for types with views that can be soundly aliased and lifetime-extended in certain conditions"
readme       = "README.md"
keywords     = ["aliasable", "lifetime", "reference", "covariance", "contravariance"]
categories   = ["rust-patterns", "memory-management", "no-std"]
include      = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
variance-family.workspace = true
either = { workspace = true, optional = true }

[features]
default = ["std"]
std     = ["alloc", "variance-family/std"]
alloc   = ["variance-family/alloc"]
