[package]
name         = "attached-ref"
authors      = ["Finley Huggins"]
description  = "Flexible abstraction for mutable or immutable self-references to backing data in the same struct"
readme       = "README.md"
keywords     = ["self-referential", "lifetime", "reference"]
categories   = ["memory-management", "data-structures", "no-std"]
include      = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
variance-family.workspace = true

[features]
default = ["alloc"]
alloc = []
