[package]
name         = "variance-family"
authors      = ["Finley Huggins"]
description  = "require that a lifetime parameter be covariant, contravariant, or unused"
readme       = "README.md"
keywords     = ["variance", "lifetime", "reference", "covariance", "contravariance"]
categories   = ["rust-patterns", "memory-management", "no-std", "no-std::no-alloc"]
include      = ["Cargo.toml", "src/**/*.rs", "LICENSE-APACHE", "LICENSE-MIT", "README.md"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]

